# solid-cli

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.ts  turbo.json  vitest.config.ts
.changeset/: pre.json
.github/workflows/: tests.yml
__mocks__/: fs.cjs
__mocks__/fs/: promises.cjs
docs/: .gitignore  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/vitepress_docs/: about.md  basic-commands.md  index.md  installation.md  start-commands.md  supported-integrations.md
docs/vitepress_docs/.vitepress/: config.ts
examples/: README.md
examples/plugin_template/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vite.config.ts
frontend/src/: index.ts  test_plugin.wasm  transform_config.wasm
frontend/src/lib/: core.ts  (+3 more)
patches/: detect-package-manager@2.0.1.patch
swc_plugin/: Cargo.toml  package.json
swc_plugin/src/: config.rs  lib.rs
swc_plugin/tests/: fixture.rs
swc_plugin/tests/fixture/basic_config/: code.js  output.js
swc_plugin/tests/fixture/basic_tests/non_destructive/: code.js
swc_plugin/tests/fixture/basic_tests/same_name_different_import/: code.js
swc_plugin/tests/fixture/basic_tests/without_plugins/: code.js
swc_plugin/tests/fixture/merge_tests/same_flag/: code.js  output.js
swc_plugin/tests/fixture/non_destructive/: output.js
swc_plugin/tests/fixture/same_name_different_import/: output.js
swc_plugin/tests/fixture/without_plugins/: output.js
(+12 files in other folders)
