[package]
name = "transform_config"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0"
swc_core = { version = "0.79", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_minifier",
    "ecma_visit",
    "ecma_ast",
    "common",
] }
[dev-dependencies]
swc_core = { version = "0.79", features = ["testing_transform", "ecma_parser"] }

testing = { version = "0.33" }
# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
